--- a/3proxy_class/CMakeLists.txt
+++ b/3proxy_class/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(proxy_class_target proxy_class.cpp)
 target_include_directories(proxy_class_target PUBLIC
-                            "${PROJECT_BINARY_DIR}")
+                            "${PROJECT_BINARY_DIR}"
+                            "${PROJECT_SOURCE_DIR}/include"
+                            )
