--- a/cmake_ws/CMakeLists.txt
+++ b/cmake_ws/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
-project(leetcode VERSION 1.0)
+project(test VERSION 1.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 
-add_executable(leetcode main.cpp)
+add_executable(test main.cpp)
 
-target_include_directories(leetcode PUBLIC
+target_include_directories(test PUBLIC
                            "${PROJECT_BINARY_DIR}"
                            "${PROJECT_SOURCE_DIR}/Linklist")
