--- a/14heap_test/CMakeLists.txt
+++ b/14heap_test/CMakeLists.txt
@@ -5,5 +5,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(heap_test heap_test.cpp)
 target_include_directories(heap_test PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_BINARY_DIR}
-)   
+    ${CMAKE_CURRENT_BINARY_DIR})   
