--- a/19memcopy/CMakeLists.txt
+++ b/19memcopy/CMakeLists.txt
@@ -3,4 +3,5 @@ project(memcopy)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(memcopy memcopy.cpp)
+add_executable(test test.c)
 target_include_directories(memcopy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR})
