--- a/11binary_tree/CMakeLists.txt
+++ b/11binary_tree/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.15)
 project(binary_tree)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# 添加调试参数
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+
 add_executable(binary_tree binary_tree.cpp)
 target_include_directories(binary_tree PUBLIC 
                         ${CMAKE_CURRENT_SOURCE_DIR}
