--- a/book_practice/1concurrency_in_action/2jthread/CMakeLists.txt
+++ b/book_practice/1concurrency_in_action/2jthread/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
-add_executable(jthread jthread.cpp)
-target_include_directories(jthread PUBLIC 
+add_executable(main main.cpp)
+target_include_directories(main PUBLIC 
                         ${CMAKE_CURRENT_SOURCE_DIR}
                         ${CMAKE_BINARY_DIR})
